#525 Prevent last line of note to be split between two pages in overflow mode.

--- a/src/stylesheets/components/print/_print.scss
+++ b/src/stylesheets/components/print/_print.scss
@@ -119,6 +119,8 @@ img {
   }
 
   .overflow & {
+    padding-bottom: $print-page-margin - 3.7mm;
+
     @media (orientation: portrait) {
       min-height: calc(100vh - 100vw);
     }
@@ -247,10 +249,6 @@ label {
     font-size: $print-font-size-large;
     line-height: $print-font-size-large * $print-line-height-large;
     letter-spacing: 0;
-  }
-
-  .overflow.metadata & {
-    margin-top: $print-page-margin - 3.7mm;
   }
 
   label {
